# UR5-Controller

./: .gitignore  CMakeLists.txt  README.md  assigment_per.md  package.xml  requirements.txt  setup.py
UR5_API/: UR5_API.py  __init__.py
config/: ur5_controllers.yaml
include/: trajectory_generator.hpp
launch/: assignment1.launch  assignment2.launch  system.launch  test.launch  test_system.launch  ur5_joint_control.launch  ur_controller.launch.xml
msg/: joint_space_motion.msg
scripts/: UR5_service.py  assignment1.py  assignment2.py  example_api.py  test.py  test1.py  wave_signal.py
src/: UR5_service.cpp  test  test.cpp  test_lib.cpp  trajectory_generation  trajectory_generation.cpp  trajectory_generator.cpp  wave_cmd.cpp
srv/: CartesianSpaceMotion.srv  GetState.srv  JointSpaceMotion.srv  MoveHome.srv
urdf/: ur5_robot.urdf
