<?xml version="1.0"?>
<package format="2">
  <name>assignment_ur</name>
  <version>0.0.0</version>
  <description>The assignment package</description>
  <maintainer email="hoanhtung2000nd@gmail.com">tony</maintainer>
  <license>No license</license>
  <author email="hoanhtung2000nd@gmail.com">Tony Ho</author>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
</package>
