<?xml version="1.0"?>
<package format="2">
  <name>assignment_ur</name>
  <version>0.0.0</version>
  <description>The assignment package</description>
  <maintainer email="hoanhtung2000nd@gmail.com">tony</maintainer>
  <license>No license</license>
  <author email="hoanhtung2000nd@gmail.com">Tony Ho</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
